[Update]layout(TOP&Sign)

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,21 @@
 <header>
   <div class="header-content">
-    
+
     <ul class="flex">
       <% if admin_signed_in? %>
-        <li><%= link_to '商品一覧',  admin_items_path %></li>
-        <li><%= link_to '会員一覧',  admin_customers_path %></li>
-        <li><%= link_to '注文履歴一覧',  admin_orders_path %></li>
-        <li><%= link_to 'ジャンル一覧',  admin_genres_path %></li>
-        <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %></li>
+        <li><%= link_to 'Members',  admin_members_path %></li>
+        <li><%= link_to 'Spots',  admin_Spots_path %></li>
+        <li><%= link_to 'Tags',  admin_tags_path %></li>
+        <li><%= link_to 'Contact',  admin_contact_path %></li>
+        <li><%= link_to 'Log out', destroy_admin_session_path, method: :delete %></li>
       <% elsif member_signed_in? %>
         <p>ようこそ、<%= current_customer.name %>さん!</p>
-        <li><%= link_to 'ログアウト', destroy_member_session_path, method: :delete %></li>
+        <li><%= link_to 'Log out', destroy_member_session_path, method: :delete %></li>
       <% else %>
-        <li><%= link_to '新規登録', new_member_registration_path %></li>
-        <li><%= link_to 'ログイン', new_member_session_path %></li>
+        <li><%= link_to 'Sign up', new_member_registration_path %></li>
+        <li><%= link_to 'Log in', new_member_session_path %></li>
       <% end %>
     </ul>
-    
+
   </div>
 </header>
