--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,46 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row my-4">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+    <div class='mx-auto col-6'>
+      <h2>Sign up</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
+
+        <div class="col-10 my-4">
+          <%= f.label :name %><br />
+          <%= f.email_field :name, :size => "50", autofocus: true, autocomplete: "email" %>
+        </div>
+        <div class="col-10 my-4">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, :size => "50", autofocus: true, autocomplete: "email" %>
+        </div>
+
+        <div class="col-10 my-4">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, :size => "50", autocomplete: "new-password" %>
+        </div>
+
+        <div class="col-10 my-4">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, :size => "50", autocomplete: "new-password" %>
+        </div>
+
+        <div class="col">
+          <%= f.submit "Sign up", class: "btn btn-info my-4 sign_up" %>
+        </div>
+      <% end %>
+
+        <div class="col my-4">
+          <P>会員登録がお済みの方は、
+            <span><%= link_to "ログイン", new_member_session_path %></span>
+            をお願いします。
+          </P>
+        </div>
+    </div>
+
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
