--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="bg-primary mb-4">
+      <h1>FUKUOKA</h1>
+    </header>
+
+    <main>
+      <%= yield %>
+    </main>
+
+    <footer class="fixed-bottom bg-primary mt-4"><h1>Copyright © Infratop Inc. All Rights Reserved.</h1></footer>
   </body>
+
+
 </html>
