--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,15 @@
   </head>
 
   <body>
-    <header class="bg-primary mb-4">
-      <h1>FUKUOKA</h1>
+    <header style="width: 100%; height: 60px;  background: red;">
+      <h2>FUKUOKA</h2>
     </header>
 
-    <main>
+    <main style="width: 100%; min-height: calc(100vh - 120px); margin: 0; margin-bottom: 60px;">
       <%= yield %>
     </main>
 
-    <footer class="fixed-bottom bg-primary mt-4"><h1>Copyright © Infratop Inc. All Rights Reserved.</h1></footer>
+    <footer class="fixed-bottom" style="width: 100%; height: 60px;  background: red;"></footer>
   </body>
 
 
