--- a/app/views/public/spots/index.html.erb
+++ b/app/views/public/spots/index.html.erb
@@ -7,7 +7,7 @@
     <h1>フォーム</h1>
   </div>
 
-  <div class="col bg-danger">
-    <h1>MAP</h1>
+  <div class="col" style="padding: 0;">
+    <%= render 'map' %>
   </div>
 </div>
