--- a/app/views/admin/tags/edit.html.erb
+++ b/app/views/admin/tags/edit.html.erb
@@ -1,4 +1,4 @@
 <section class="inner">
 	<h2 class="section-ttl">ジャンル新規登録</h2>
-  <%= render 'form', genre: @tag, url: admin_tag_path(@tag), submit: '更新' %>
+  <%= render 'form', tag: @tag, url: admin_tag_path(@tag), submit: '更新' %>
 </section>
