--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <header style="width: 100%; height: 60px;  background: red;">
-      <h2>FUKUOKA</h2>
+      <%= render 'layouts/header' %>
     </header>
 
     <main style="width: 100%; min-height: calc(100vh - 120px); margin: 0; margin-bottom: 60px;">
