--- a/app/views/admin/tags/_form.html.erb
+++ b/app/views/admin/tags/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model:tag, url: url do |f| %>
-	<%= render 'layouts/error_messages', resource: tag %>
+	<%#= render 'layouts/error_messages', resource: tag %>
 	<%= f.label :name, "タグ名:" %>
 	<%= f.text_field :name %>
 	<%= f.submit submit, class: "btn btn-primary ml2" %>
