--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
         <div class="col-10 my-4">
           <%= f.label :name %><br />
-          <%= f.email_field :name, :size => "50", autofocus: true, autocomplete: "email" %>
+          <%= f.text_field :name, :size => "50", autofocus: true, :placeholder =>"福岡" %>
         </div>
         <div class="col-10 my-4">
           <%= f.label :email %><br />
