--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <header style="width: 100%; height: 60px;  background: red;">
+    <header style="width: 100%; height: 60px;  background: #f0e68c;">
       <%= render 'layouts/header' %>
     </header>
 
@@ -20,7 +20,7 @@
       <%= yield %>
     </main>
 
-    <footer class="fixed-bottom" style="width: 100%; height: 60px;  background: red;"></footer>
+    <footer class="fixed-bottom" style="width: 100%; height: 60px;  background: #f0e68c;"></footer>
   </body>
 
 
