--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
         <li><%= link_to 'Log out', destroy_admin_session_path, method: :delete %></li>
       <% elsif member_signed_in? %>
         <p class="col-md">ようこそ、<%= current_member.name %>さん!</p>
-        <li><%= link_to 'Log out', destroy_member_session_path, method: :delete %></li>
+        <li class="ml-2"><%= link_to 'Log out', destroy_member_session_path, method: :delete %></li>
       <% else %>
         <li class="ml-2"><%= link_to 'Sign up', new_member_registration_path %></li>
         <li class="ml-2"><%= link_to 'Log in', new_member_session_path %></li>
