--- a/app/views/public/spots/_sidebar.html.erb
+++ b/app/views/public/spots/_sidebar.html.erb
@@ -1,3 +1,11 @@
-<div>
-  <div></div>
+<div class="container">
+  <div class="d-flex justify-content-center flex-column row">
+    <div><%#= link_to 'Tags',  tags_path %></div>
+    <div><%= link_to 'about', about_path, class: "btn btn-info" %></div>
+    <% if member_signed_in? %>
+    <div><%#= link_to '新規登録' %></div>
+    <div><%#= link_to 'お気に入り' %></div>
+    <div><%= link_to 'My Page', mypage_path, class: "btn btn-info" %></div>
+    <% end %>
+  </div>
 </div>
