--- a/app/views/public/spots/index.html.erb
+++ b/app/views/public/spots/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="col-3 bg-info">
-    <%= render 'form', spot: @spot, url: new_spot_path, submit: '登録' %>
+    <%= render 'form', spot: @spot, url: spots_path %>
   </div>
 
   <div class="col" style="padding: 0;">
