--- a/app/views/public/spots/_form.html.erb
+++ b/app/views/public/spots/_form.html.erb
@@ -8,6 +8,10 @@
         <%= f.label :image, "画像選択" %><br>
         <%= f.file_field :image,  accept:'image/*', class: "mb-2" %>
       </p>
+    </div class="text-center">
+      <p>※画像未選択の場合は、「画像準備中」になります。</p>
+    <div>
+      <p></p>
     </div>
 
     <div class="text-center my-2">
