--- a/app/views/public/spots/show.html.erb
+++ b/app/views/public/spots/show.html.erb
@@ -4,27 +4,36 @@
     <div class="col-8">
       <div class="row">
 
-        <div class="col-6">
-          <%= image_tag @spot.get_image %>
+        <div class="col-6 justify-content-center my-2 ml-2">
+          <%= image_tag @spot.get_image, style: "width: 100%; height: auto; padding: 5px;" %>
         </div>
+
+        <div class="col"></div>
 
         <div class="col-5">
 
           <div class="row my-2">
-            <h4><%= @spot.member.name %></h4>
-          </div>
-
-          <div class="row justify-content-between my-2">
-            <h4 class="col-2"><%= @spot.title %></h4>
-            <h4 class="col-2"><%= @spot.tag.name %></h4>
+            <h4>Member Name: <%= @spot.member.name %></h4>
           </div>
 
           <div class="row my-2">
+            <h4>
+              Title:<%= @spot.title %><br>
+              Tag:<%= @spot.tag.name %>
+            </h4>
+          </div>
+
+          <div class="d-flex flex-column row my-2", style="height: 200px;" >
+            <h4>Recommendation</h4>
             <p><%= @spot.description %></p>
           </div>
 
+          <div class="justify-content-center row">
+            <%= link_to "Edit", edit_spot_path, class: "btn btn-success" %>
+          </div>
+
           <div class="row">
-            <p><%= @spot.address %></p>
+            <p>address: <%= @spot.address %></p>
           </div>
 
           <div class="row">
