--- a/app/views/public/spots/edit.html.erb
+++ b/app/views/public/spots/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h2 class="my-2"><%= @spot.title %>の編集</h2>
 
-  <div class="justify-content-center row">
+  <div class="row">
     <div class="justify-content-center my-2 ml-2 col-6">
       <%= image_tag @spot.get_image, style: "width: 100%; height: auto; padding: 5px;" %>
     </div>
