--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -2,18 +2,20 @@
   <div class="row">
 
     <div class="col-10">
-      <div class="row">
+      <div class="row my-4">
         <h3 class="mr-5">My Page</h3>
         <p class="mx-5">Name: <%= current_member.name %></p>
         <p class="mx-5">MemberID: <%= current_member.id %></p>
-        <div><%= link_to "Edit", edit_information_path, class: "btn btn-success" %></div>
+        <% unless current_member.guest_member? %>
+          <div><%= link_to "Edit", edit_information_path, class: "btn btn-success" %></div>
+        <% end %>
       </div>
 
       <div class="row">
         <% @spots.each do |spot| %>
           <%= link_to spot_path(spot) do %>
-          <div class="card" style="width: 18rem;">
-            <%= image_tag spot.get_image, class: "card-image-top", style: "padding: 5px;" %>
+          <div class="card mx-2" style="width: 18rem;">
+            <%= image_tag spot.get_image, class: "card-image-top", style: "padding: 5px; height: 250px;" %>
               <div class="card-body">
                 <h5 class="card-title"><%= spot.title %> (<%= spot.tag.name %>)</h5>
                 <p class="card-text"></p>
