--- a/app/views/public/spots/show.html.erb
+++ b/app/views/public/spots/show.html.erb
@@ -5,7 +5,7 @@
       <div class="row">
 
         <div class="col-6 justify-content-center my-2 ml-2">
-          <%= image_tag @spot.get_image, style: "width: 100%; height: auto; padding: 5px;" %>
+          <%= image_tag @spot.get_image, style: "width: 100%; height: 300px; padding: 5px;" %>
         </div>
 
         <div class="col"></div>
