--- a/app/views/public/favorites/create.js.erb
+++ b/app/views/public/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$('#favorite_buttons_<%= @spot.id %>').html("<%= j(render "favorites/favorite", book: @spot) %>");
+$('#favorite_buttons_<%= @spot.id %>').html("<%= j(render "public/favorites/favorite", spot: @spot) %>");
