--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -3,9 +3,9 @@
 
     <div class="col-10">
       <div class="row my-4">
-        <h3 class="mr-5">My Page</h3>
-        <p class="mx-5">Name: <%= current_member.name %></p>
-        <p class="mx-5">MemberID: <%= current_member.id %></p>
+        <h3 class="mr-5">User Page</h3>
+        <p class="mx-5">Name: <%= @member.name %></p>
+        <p class="mx-5">MemberID: <%= @member.id %></p>
         <% unless current_member.guest_member? %>
           <div><%= link_to "Edit", edit_information_path, class: "btn btn-success" %></div>
         <% end %>
@@ -33,8 +33,8 @@
       </div>
     </div>
 
-    <div class="col-2">
-
+    <div class="col-2 my-4">
+      <%= render "public/relationships/follow" , member: @member %>
     </div>
 
   </div>
