--- a/app/views/public/spots/_sidebar.html.erb
+++ b/app/views/public/spots/_sidebar.html.erb
@@ -5,7 +5,7 @@
     <% if member_signed_in? %>
     <div><%#= link_to '新規登録' %></div>
     <div><%#= link_to 'お気に入り' %></div>
-    <div><%= link_to 'My Page', mypage_path, class: "btn btn-info" %></div>
+    <div><%= link_to 'My Page', member_path(current_member.id), class: "btn btn-info" %></div>
     <% end %>
   </div>
 </div>
