--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,30 +1,37 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
 
-    <div class="container">
-    <%= link_to 'Fukuoka_Explorer_Navi', (admin_signed_in? ? admin_top_path : spots_path ), class: "logo" %>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls"navbarNavDropdown" aria-expand="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <div class="row m-2">
+        <div class="justify-content-start mx-5">
+          <%= link_to 'Fukuoka_Explorer_Navi', (admin_signed_in? ? admin_top_path : spots_path ), class: "logo" %>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls"navbarNavDropdown" aria-expand="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
 
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav ml-auto">
-      <% if admin_signed_in? %>
-        <li><%#= link_to 'Members',  admin_members_path %></li>
-        <li><%#= link_to 'Spots',  admin_Spots_path %></li>
-        <li><%= link_to 'Tags',  admin_tags_path %></li>
-        <li><%#= link_to 'Contact',  admin_contact_path %></li>
-        <li><%= link_to 'Log out', destroy_admin_session_path, method: :delete %></li>
-      <% elsif member_signed_in? %>
-        <p class="col-md">ようこそ、<%= current_member.name %>さん!</p>
-        <li class="ml-2"><%= link_to 'Log out', destroy_member_session_path, method: :delete %></li>
-      <% else %>
-        <li class="ml-2"><%= link_to 'Sign up', new_member_registration_path %></li>
-        <li class="ml-2"><%= link_to 'Log in', new_member_session_path %></li>
-      <% end %>
-    </ul>
-    </div>
+        <div class="justify-content-center mx-5">
+          <%= render "public/searches/form" %>
+        </div>
 
-    </div>
+        <div class="justify-content-end ml-5">
+          <ul class="navbar-nav ml-auto">
+            <% if admin_signed_in? %>
+              <li><%#= link_to 'Members',  admin_members_path %></li>
+              <li><%#= link_to 'Spots',  admin_Spots_path %></li>
+              <li><%= link_to 'Tags',  admin_tags_path %></li>
+              <li><%#= link_to 'Contact',  admin_contact_path %></li>
+              <li><%= link_to 'Log out', destroy_admin_session_path, method: :delete %></li>
+            <% elsif member_signed_in? %>
+              <p class="col-md">ようこそ、<%= current_member.name %>さん!</p>
+              <li class="ml-2"><%= link_to 'Log out', destroy_member_session_path, method: :delete %></li>
+            <% else %>
+              <li></li>
+              <li class="ml-2"><%= link_to 'Sign up', new_member_registration_path %></li>
+              <li class="ml-2"><%= link_to 'Log in', new_member_session_path %></li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+
   </nav>
 </header>
