--- a/app/views/public/spots/index.html.erb
+++ b/app/views/public/spots/index.html.erb
@@ -1,13 +1,10 @@
-<div class="row">
-  <div class="col-1 bg-secondary">
-    <%= render 'sidebar' %>
-  </div>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+    </div>
 
-  <div class="col-3 bg-info">
-    <%= render 'form', spot: @spot, url: spots_path %>
-  </div>
-
-  <div class="col" style="padding: 0;">
-    <%= render 'map' %>
+    <div class="col-9">
+      <%= render "index", spots: @spots %>
+    </div>
   </div>
 </div>
