--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,7 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container">
+  <h1>管理者トップ</h1>
+  <h2>本日の登録件数</h2>
+  <p>新規会員数:<%= link_to Member.member_today.count, admin_members_path(created_at: 'today') %>人</p>
+  <p>新規登録スポット:<%= link_to Spot.spot_today.count, admin_spots_path(created_at: 'today') %>件</p>
+</div>
+
