--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -3,7 +3,7 @@
 
     <div class="col-10">
       <div class="row my-4">
-        <h3 class="mr-5">User Page</h3>
+        <h3 class="mr-5">Member Page</h3>
         <p class="mx-5">Name: <%= @member.name %></p>
         <p class="mx-5">MemberID: <%= @member.id %></p>
         <% unless current_member.guest_member? %>
