--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,6 +1,1 @@
-<p>テスト</p>
-<script type="text/javascript">
-  $(document).ready(function() {
-    $("p").text("成功！！");
-  });
-</script>
+<h2>福岡の観光について、福岡在住でも知らない観光地や飲食店を共有することができるSNSサイトです。</h2>
