--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -6,7 +6,7 @@
 
       <div class="col-10 mx-auto">
         <div class="row mt-4">
-          <%= link_to "ゲストログイン", public_compute_asset_path, class: "btn btn-secondary btn-block my-4 sign_in" %>
+          <%= link_to "ゲストログイン", public_compute_asset_path, class: "btn btn-secondary btn-block my-4" %>
           <p>
             スポットを投稿するためには　会員登録が必要となります。<br>
             以下より　新規登録　または　ログイン　をお願いします。
@@ -14,7 +14,7 @@
         </div>
         <div class="row mt-4">
           <p>会員登録がお済みでない場合は、新規登録をお願いします。</p>
-          <%= link_to "Sign Up", new_member_registration_path, class: "btn btn-info btn-block my-4 sign_up" %>
+          <%= link_to "Sign Up", new_member_registration_path, class: "btn btn-info btn-block my-4" %>
         </div>
         <div class="row mt-4">
           <P>会員登録がお済みの方は、ログインをお願いします。</P>
