--- a/app/views/public/spots/_map.html.erb
+++ b/app/views/public/spots/_map.html.erb
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>Google Maps API</title>
+    <title>Google Maps</title>
   </head>
   <body>
 
@@ -74,7 +74,7 @@
     </script>
 
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_API_KEY'] %>&callback=initMap">
     </script>
   </body>
 </html>
