--- a/app/views/public/spots/show.html.erb
+++ b/app/views/public/spots/show.html.erb
@@ -6,6 +6,11 @@
 
         <div class="col-6 justify-content-center my-4 ml-2">
           <%= image_tag @spot.get_image, style: "width: 100%; height: 300px; padding: 5px;" %>
+          <div class="justify-content-center my-4">
+            <% @spot.genres.each do |genre| %>
+              <span class="label"><%= genre.name %></span>
+            <% end %>
+          </div>
         </div>
 
         <div class="col"></div>
